--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify-json/tabler": "^1.1.117",
     "astro": "^4.11.5",
     "astro-icon": "^1.1.0",
+    "astro-pagefind": "^1.6.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "framer-motion": "^11.3.7",
