--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
+    "build-prod": "./.build/buildProd.sh",
     "preview": "astro preview",
     "astro": "astro"
   },
