--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.3.4",
+    "@astrojs/react": "^4.3.0",
     "@astrojs/tailwind": "^6.0.2",
     "@iconify-json/tabler": "^1.1.117",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "astro": "^5.13.2",
     "astro-icon": "^1.1.0",
     "astro-pagefind": "^1.8.3",
@@ -21,6 +25,8 @@
     "dayjs": "^1.11.11",
     "framer-motion": "^11.3.7",
     "mini-svg-data-uri": "^1.4.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.5.3"
