adds an rss feed
- also cleans up some console logs and other unused stuff

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/react": "^4.3.0",
+    "@astrojs/react": "^4.4.0",
+    "@astrojs/rss": "^4.0.12",
     "@astrojs/tailwind": "^6.0.2",
     "@iconify-json/tabler": "^1.1.117",
     "@types/react": "^19.1.10",
